examples/errors/parser-invalid-range.spcasm
org 0
incbin "../binary.bin":4-2
